fix button styling on mobile

--- a/src/client/public/stylesheets/reset.scss
+++ b/src/client/public/stylesheets/reset.scss
@@ -18,3 +18,10 @@
 li {
   list-style: none;
 }
+
+button, 
+input[type='submit'] {
+  // to fix button styling on mobile
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
